--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,8 @@
 <IfModule mod_headers.c>
-    <FilesMatch "\.(jpg|jpeg|png|flif|bmp|js)$">
+    <FilesMatch "\.(jpg|jpeg|png|flif|bmp|js|pdf)$">
         Header set Cache-Control "max-age=31536000, immutable"
+		SetEnvIf Origin "https://mozilla.github.io$" AccessControlAllowOrigin=$0
+        Header add Access-Control-Allow-Origin %{AccessControlAllowOrigin}e env=AccessControlAllowOrigin
+        Header merge Vary Origin
     </FilesMatch>
 </IfModule>
